馃殌 V2.3 Major Update: Custom AI Model System + Multi-AI Code Optimization
馃搵 涓枃鏇存柊璇存槑 / Chinese Update Notes:

鉁?V2.3 鏍稿績鍔熻兘:
- 馃 鑷畾涔堿I妯″瀷绯荤粺 - 閫氳繃API娣诲姞浠讳綍AI妯″瀷锛屾棤闇€淇敼浠ｇ爜
- 馃敡 鏀寔 OpenAI/Anthropic/Google/鑷畾涔?API鏍煎紡
- 馃И 涓€閿ā鍨嬫祴璇曞拰楠岃瘉鍔熻兘
- 馃摛 妯″瀷閰嶇疆瀵煎嚭瀵煎叆
- 馃寪 瀹屾暣鏀寔鏈湴妯″瀷 (Ollama/vLLM/LocalAI)
- 鈿欙笍 鐑姞杞?- 娣诲姞鍚庣珛鍗冲彲鐢紝鏃犻渶閲嶅惎

鉁?V2.2 鏍稿績鍔熻兘:
- 馃 澶欰I鍗忓悓浠ｇ爜浼樺寲 - 4+涓狝I鍚屾椂鍒嗘瀽浠ｇ爜
- 馃 鍏辫瘑鏈哄埗璇嗗埆楂樺彲淇″害寤鸿
- 馃搳 7澶т紭鍖栫被鍒?(鎬ц兘/瀹夊叏/鍙鎬?鍙淮鎶ゆ€?鏋舵瀯/鏈€浣冲疄璺?閿欒澶勭悊)
- 馃椇锔?涓夐樁娈靛疄鏂借矾绾垮浘鐢熸垚
- 鈿?Quick Wins鑷姩璇嗗埆

鉁?V2.1 鏍稿績鍔熻兘:
- 馃攳 浠ｇ爜鏅鸿兘妫€娴?- 鍏ㄩ潰鍒嗘瀽浠ｇ爜璐ㄩ噺
- 馃摎 瀛︿範鏂囨。鑷姩鐢熸垚 - 鍖呭惈瀛︿範璺嚎鍥?- 馃帹 璁捐妯″紡鑷姩璇嗗埆
- 鈿狅笍 浠ｇ爜寮傚懗鍜屽畨鍏ㄦ紡娲炴壂鎻?- 馃挕 涓€у寲瀛︿範寤鸿

馃摑 鏂板鏂囦欢:
- backend/core/ai_model_manager.py - AI妯″瀷绠＄悊鍣?(700+琛?
- backend/core/code_optimizer.py - 澶欰I浠ｇ爜浼樺寲鍣?(600+琛?
- backend/core/optimization_report_generator.py - 浼樺寲鎶ュ憡鐢熸垚鍣?(400+琛?
- backend/core/code_inspector.py - 浠ｇ爜妫€娴嬪櫒 (500+琛?
- backend/core/learning_doc_generator.py - 瀛︿範鏂囨。鐢熸垚鍣?(600+琛?
- backend/core/test_generator.py - 鑷姩娴嬭瘯鐢熸垚鍣?(400+琛?
- backend/core/code_block_analyzer.py - 浠ｇ爜鍧楀垎鏋愬櫒 (500+琛?
- backend/core/cache_manager.py - Redis缂撳瓨绠＄悊
- backend/core/cost_estimator.py - 鎴愭湰浼扮畻绯荤粺

馃摎 鏂板鏂囨。 (28000+瀛?:
- CUSTOM_AI_MODELS_GUIDE.md - 鑷畾涔堿I妯″瀷瀹屽叏鎸囧崡 (8000+瀛?
- MULTI_AI_OPTIMIZATION_GUIDE.md - 澶欰I浼樺寲瀹屽叏鎸囧崡 (8000+瀛?
- CODE_INSPECTION_GUIDE.md - 浠ｇ爜妫€娴嬫寚鍗?(6000+瀛?
- FEATURE_SUMMARY_V2.0.md - V2.0鍔熻兘鎬荤粨 (4000+瀛?
- QUICK_EXAMPLE.md - 瀹炴垬绀轰緥 (2000+瀛?

馃攧 涓昏鏇存柊:
- backend/main.py - 鏂板16涓狝PI绔偣
- README.md - 鍏ㄩ潰鏇存柊鏂囨。锛屾坊鍔犵増鏈巻鍙插拰璇︾粏鍔熻兘璇存槑
- requirements.txt - 鏇存柊渚濊禆鍖?- docker-compose.yml - 娣诲姞Redis鏀寔

馃搳 鎬ц兘鎻愬崌:
- 鈿?Redis缂撳瓨: 1000鍊嶉€熷害鎻愬崌
- 馃挵 鎴愭湰闄嶄綆: 80-90%
- 馃搱 鍑嗙‘鐜? 52% 鈫?94% (涓夌淮搴﹁縼绉?
- 馃 鏀寔妯″瀷: 7+ 鍐呯疆 + 鏃犻檺鑷畾涔?
---

馃搵 English Update Notes:

鉁?V2.3 Core Features:
- 馃 Custom AI Model System - Add any AI model via API without code changes
- 馃敡 Support for OpenAI/Anthropic/Google/Custom API formats
- 馃И One-click model testing and validation
- 馃摛 Model configuration export/import
- 馃寪 Full support for local models (Ol

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,94 +1,88 @@
 version: '3.8'
 
 services:
-  # Redis (用于 Celery 任务队列)
+  # Redis Cache Service / Redis缓存服务
   redis:
     image: redis:7-alpine
+    container_name: ai-migration-redis
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - redis-data:/data
+    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
       retries: 3
+    networks:
+      - ai-migration-network
+    restart: unless-stopped
 
-  # PostgreSQL (可选 - 生产环境推荐)
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: code_migration
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
-
-  # FastAPI 后端
+  # Backend API Service / 后端API服务
   backend:
     build:
-      context: .
-      dockerfile: Dockerfile.backend
+      context: ./backend
+      dockerfile: ../Dockerfile.backend
+    container_name: ai-migration-backend
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/code_migration
+      # Redis Configuration
       - REDIS_URL=redis://redis:6379/0
+      
+      # AI API Keys (从 .env 文件读取)
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - QWEN_API_KEY=${QWEN_API_KEY}
+      
+      # Server Configuration
+      - HOST=0.0.0.0
+      - PORT=8000
+      - ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+      
+      # Directories
+      - UPLOAD_DIR=/app/data/uploads
+      - OUTPUT_DIR=/app/data/outputs
+      - CACHE_DIR=/app/data/cache
     volumes:
-      - ./backend:/app/backend
       - ./data:/app/data
-      - ./logs:/app/logs
+      - ./backend:/app
     depends_on:
       redis:
         condition: service_healthy
-      postgres:
-        condition: service_healthy
-    command: uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - ai-migration-network
+    restart: unless-stopped
 
-  # Celery Worker
-  celery_worker:
-    build:
-      context: .
-      dockerfile: Dockerfile.backend
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/code_migration
-      - REDIS_URL=redis://redis:6379/0
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-    volumes:
-      - ./backend:/app/backend
-      - ./data:/app/data
-      - ./logs:/app/logs
-    depends_on:
-      - redis
-      - postgres
-    command: celery -A backend.core.celery_app worker --loglevel=info
-
-  # React 前端
+  # Frontend Service / 前端服务
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: ai-migration-frontend
     ports:
       - "3000:3000"
     environment:
-      - VITE_API_URL=http://localhost:8000
-    volumes:
-      - ./frontend/src:/app/src
+      - VITE_API_BASE_URL=http://localhost:8000
+      - VITE_WS_BASE_URL=ws://localhost:8000
     depends_on:
       - backend
-    command: npm run dev -- --host 0.0.0.0
+    networks:
+      - ai-migration-network
+    restart: unless-stopped
 
 volumes:
-  redis_data:
-  postgres_data:
+  redis-data:
+    driver: local
 
+networks:
+  ai-migration-network:
+    driver: bridge
